--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,6 +1,4 @@
 .portfolio-item-inner {
-  width: 320px;
-  height: 400px;
   border-radius: 20px;
   overflow: hidden;
   border: 8px solid var(--skin-color);
@@ -19,7 +17,7 @@
   top: 0;
   right: -100%;
   position: absolute;
-  background: var(--bg-black-900);
+  background: var(--bg-black-100);
   backdrop-filter: blur(5px);
   color: var(--skin-color);
   padding: 30px;
@@ -70,4 +68,46 @@
 .card-btn a {
   text-decoration: none;
   color: #ffff;
+}
+
+@media (max-width: 395px) {
+  .portfolio-img img {
+    height: 500px;
+  }
+  .portfolio-img button {
+    margin: 4px 0;
+  }
+  .card-info {
+    margin: 15px 0;
+  }
+}
+
+@media (max-width: 355px) {
+  .portfolio-img img {
+    height: 500px;
+  }
+  .portfolio-img button {
+    margin: 4px 0;
+  }
+  .card-info {
+    margin: 15px 0;
+  }
+  .card-title {
+    font-size: 30px;
+  }
+}
+@media (max-width: 280px) {
+  .portfolio-img img {
+    height: 500px;
+  }
+  .portfolio-img button {
+    margin: 3px 0;
+  }
+  .card-info {
+    margin: 10px 0;
+    font-size: 15px;
+  }
+  .card-title {
+    font-size: 25px;
+  }
 }
