--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,113 +1,347 @@
-.portfolio-item-inner {
-  border-radius: 20px;
-  overflow: hidden;
-  border: 8px solid var(--skin-color);
-  position: relative;
-}
-
-.portfolio-img img {
+[class~="portfolio-img"] [class~="card-body"] {
   width: 100%;
-  height: 400px;
-  object-fit: cover;
 }
-
-.portfolio-img .card-body {
-  width: 100%;
+[class~="portfolio-img"] [class~="card-body"] {
   height: 100%;
-  top: 0;
-  right: -100%;
-  position: absolute;
-  background: var(--bg-black-100);
-  backdrop-filter: blur(5px);
-  color: var(--skin-color);
-  padding: 30px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  transition: 1s;
 }
-
-.portfolio-item-inner:hover .card-body {
+.portfolio-item-inner {
+  border-radius: 1.25pc;
+}
+.portfolio-item-inner {
+  overflow: hidden;
+}
+.portfolio-item-inner {
+  border-left-width: 0.5pc;
+}
+[class~="portfolio-img"] [class~="card-body"] {
+  top: 0;
+}
+[class~="portfolio-item-inner"]:hover [class~="card-body"] {
   right: 0;
 }
-
-.portfolio .portfolio-item-inner:hover {
-  border: 6px solid var(--skin-color);
+.portfolio-item-inner {
+  border-bottom-width: 0.5pc;
 }
-
-.card-title {
+[class~="portfolio-img"] [class~="card-body"] {
+  right: -100%;
+}
+.portfolio-item-inner {
+  border-right-width: 0.5pc;
+}
+.portfolio-item-inner {
+  border-top-width: 0.5pc;
+}
+[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
+  border-left-width: 0.375pc;
+}
+[class~="portfolio"] [class~="portfolio-item-inner"]:hover,
+.portfolio-item-inner {
+  border-left-style: solid;
+}
+.portfolio-item-inner,
+[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
+  border-bottom-style: solid;
+}
+[class~="portfolio-img"] [class~="card-body"] {
+  position: absolute;
+}
+.portfolio-item-inner,
+[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
+  border-right-style: solid;
+}
+[class~="portfolio-img"] [class~="card-body"] {
+  background: var(--bg-black-100);
+}
+[class~="portfolio"] [class~="portfolio-item-inner"]:hover,
+.portfolio-item-inner {
+  border-top-style: solid;
+}
+[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
+  border-bottom-width: 0.375pc;
+}
+.portfolio-item-inner {
+  border-left-color: var(--skin-color);
+}
+.portfolio-item-inner {
+  border-bottom-color: var(--skin-color);
+}
+.portfolio-item-inner {
+  border-right-color: var(--skin-color);
+}
+.portfolio-item-inner {
+  border-top-color: var(--skin-color);
+}
+.portfolio-item-inner {
+  border-image: none;
+}
+[class~="portfolio-img"] [class~="card-body"] {
+  backdrop-filter: blur(5px);
+}
+[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
+  border-right-width: 0.375pc;
+}
+.portfolio-item-inner {
+  position: relative;
+}
+[class~="card-title"] {
   text-transform: uppercase;
-  font-size: 50px;
+}
+[class~="card-title"] {
+  font-size: 37.5pt;
+}
+[class~="card-title"] {
   font-weight: 500;
 }
-
-.card-sub-title {
+[class~="card-btn"],
+[class~="card-sub-title"] {
   text-transform: capitalize;
+}
+[class~="card-sub-title"] {
   font-size: 15px;
+}
+[class~="card-sub-title"] {
   font-weight: 700;
 }
-
-.card-info {
-  font-size: 16px;
-  line-height: 25px;
-  margin: 25px 0;
+[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
+  border-top-width: 0.375pc;
+}
+[class~="card-info"] {
+  font-size: 1pc;
+}
+[class~="card-info"] {
+  line-height: 18.75pt;
+}
+[class~="card-info"] {
+  margin-left: 0;
+}
+[class~="card-info"] {
+  margin-bottom: 18.75pt;
+}
+[class~="portfolio-img"] [class~="card-body"] {
+  color: var(--skin-color);
+}
+[class~="card-info"] {
+  margin-right: 0;
+}
+[class~="card-info"] {
+  margin-top: 18.75pt;
+}
+[class~="card-info"] {
   font-weight: 400;
+}
+[class~="portfolio-img"] [class~="card-body"] {
+  padding-left: 22.5pt;
+}
+[class~="card-info"] {
   color: var(--text-black-900);
 }
-
-.card-btn {
+[class~="portfolio-img"] [class~="card-body"] {
+  padding-bottom: 22.5pt;
+}
+[class~="card-btn"] {
   background: var(--skin-color);
-  padding: 10px 15px;
+}
+[class~="portfolio-img"] [class~="card-body"] {
+  padding-right: 22.5pt;
+}
+[class~="card-btn"] {
+  padding-left: 0.15625in;
+}
+[class~="card-btn"] {
+  padding-bottom: 0.625pc;
+}
+[class~="card-btn"] {
+  padding-right: 0.15625in;
+}
+[class~="card-btn"] {
+  padding-top: 0.625pc;
+}
+[class~="card-btn"] {
   width: 120px;
-  text-transform: capitalize;
-  border: none;
+}
+[class~="card-btn"] {
+  border-left-width: medium;
+}
+[class~="portfolio-img"] [class~="card-body"] {
+  padding-top: 22.5pt;
+}
+[class~="portfolio-img"] [class~="card-body"] {
+  display: flex;
+}
+[class~="portfolio-img"] img {
+  width: 100%;
+}
+[class~="card-btn"] {
+  border-bottom-width: medium;
+}
+[class~="card-btn"] {
+  border-right-width: medium;
+}
+[class~="card-btn"] {
+  border-top-width: medium;
+}
+[class~="card-btn"] {
+  border-left-style: none;
+}
+[class~="card-btn"] {
+  border-bottom-style: none;
+}
+[class~="card-btn"] {
+  border-right-style: none;
+}
+[class~="portfolio-img"] [class~="card-body"] {
+  flex-direction: column;
+}
+[class~="card-btn"] {
+  border-top-style: none;
+}
+[class~="card-btn"] {
+  border-left-color: currentColor;
+}
+[class~="card-btn"] {
+  border-bottom-color: currentColor;
+}
+[class~="card-btn"] {
+  border-right-color: currentColor;
+}
+[class~="card-btn"] {
+  border-top-color: currentColor;
+}
+[class~="portfolio-img"] [class~="card-body"] {
+  justify-content: center;
+}
+[class~="card-btn"] {
+  border-image: none;
+}
+[class~="portfolio-img"] [class~="card-body"] {
+  transition: 1s;
+}
+[class~="portfolio-img"] img {
+  height: 400px;
+}
+[class~="card-btn"] {
   outline: none;
+}
+[class~="card-btn"] {
   cursor: pointer;
-  margin: 0 1px;
+}
+[class~="card-btn"] {
+  margin-left: 0.0625pc;
+}
+[class~="card-btn"] {
+  margin-bottom: 0;
+}
+[class~="card-btn"] {
+  margin-right: 0.0625pc;
+}
+[class~="card-btn"] {
+  margin-top: 0;
+}
+[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
+  border-left-color: var(--skin-color);
+}
+[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
+  border-bottom-color: var(--skin-color);
+}
+[class~="portfolio-img"] img {
+  object-fit: cover;
+}
+[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
+  border-right-color: var(--skin-color);
+}
+[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
+  border-top-color: var(--skin-color);
+}
+[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
+  border-image: none;
 }
 .card-btn a {
   text-decoration: none;
-  color: #ffff;
 }
-
+.card-btn a {
+  color: #ff0;
+}
 @media (max-width: 395px) {
-  .portfolio-img img {
-    height: 500px;
+  [class~="portfolio-img"] img {
+    height: 5.208333333in;
   }
+  .card-info,
   .portfolio-img button {
-    margin: 4px 0;
+    margin-left: 0;
   }
   .card-info {
-    margin: 15px 0;
+    margin-bottom: 0.9375pc;
+  }
+  .portfolio-img button,
+  .card-info {
+    margin-right: 0;
+  }
+  .card-info {
+    margin-top: 0.9375pc;
+  }
+  .portfolio-img button {
+    margin-bottom: 0.25pc;
+  }
+  .portfolio-img button {
+    margin-top: 0.25pc;
   }
 }
-
 @media (max-width: 355px) {
-  .portfolio-img img {
+  [class~="portfolio-img"] button,
+  [class~="card-info"] {
+    margin-left: 0;
+  }
+  [class~="card-info"] {
+    margin-bottom: 11.25pt;
+  }
+  [class~="card-info"],
+  [class~="portfolio-img"] button {
+    margin-right: 0;
+  }
+  [class~="card-info"] {
+    margin-top: 11.25pt;
+  }
+  [class~="portfolio-img"] img {
     height: 500px;
   }
-  .portfolio-img button {
-    margin: 4px 0;
+  [class~="portfolio-img"] button {
+    margin-bottom: 0.25pc;
   }
-  .card-info {
-    margin: 15px 0;
+  [class~="card-title"] {
+    font-size: 0.3125in;
   }
-  .card-title {
-    font-size: 30px;
+  [class~="portfolio-img"] button {
+    margin-top: 0.25pc;
   }
 }
 @media (max-width: 280px) {
   .portfolio-img img {
-    height: 500px;
+    height: 5.208333333in;
   }
-  .portfolio-img button {
-    margin: 3px 0;
+  [class~="portfolio-img"] button,
+  [class~="card-info"] {
+    margin-left: 0;
   }
-  .card-info {
-    margin: 10px 0;
-    font-size: 15px;
+  [class~="card-info"] {
+    margin-bottom: 0.625pc;
   }
-  .card-title {
-    font-size: 25px;
+  [class~="portfolio-img"] button,
+  [class~="card-info"] {
+    margin-right: 0;
+  }
+  [class~="card-info"] {
+    margin-top: 0.625pc;
+  }
+  [class~="portfolio-img"] button {
+    margin-bottom: 2.25pt;
+  }
+  [class~="portfolio-img"] button {
+    margin-top: 2.25pt;
+  }
+  [class~="card-info"] {
+    font-size: 11.25pt;
+  }
+  [class~="card-title"] {
+    font-size: 0.260416667in;
   }
 }
