--- a/css/style-switcher.css
+++ b/css/style-switcher.css
@@ -1,73 +1,193 @@
-.style-switcher {
-  position: fixed;
-  right: 0;
-  top: 60px;
-  padding: 15px;
-  width: 200px;
-  border: 1px solid var(--bg-black-50);
-  background: var(--bg-black-100);
-  z-index: 101;
-  border-radius: 5px;
-  transition: all 0.3s ease;
-  transform: translateX(100%);
-}
 .style-switcher.open {
   transform: translateX(-25px);
 }
-.style-switcher .s-icon {
+[class~="style-switcher"] [class~="s-icon"] i {
+  line-height: 2.5pc;
+}
+[class~="style-switcher"] [class~="s-icon"] {
   position: absolute;
-  height: 40px;
+}
+[class~="style-switcher"] [class~="s-icon"] {
+  height: 0.416666667in;
+}
+[class~="style-switcher"] [class~="s-icon"] {
   width: 40px;
+}
+[class~="style-switcher"] [class~="s-icon"] {
   text-align: center;
-  font-size: 20px;
+}
+[class~="style-switcher"] [class~="s-icon"] {
+  font-size: 15pt;
+}
+[class~="style-switcher"],
+[class~="style-switcher"] [class~="s-icon"] {
   background: var(--bg-black-100);
+}
+[class~="style-switcher"] {
+  position: fixed;
+}
+[class~="style-switcher"] {
+  right: 0;
+}
+[class~="style-switcher"] {
+  top: 45pt;
+}
+[class~="style-switcher"] h4 {
+  margin-left: 0;
+}
+[class~="style-switcher"] {
+  padding-left: 0.9375pc;
+}
+[class~="style-switcher"] [class~="s-icon"] {
   color: var(--text-black-900);
+}
+[class~="style-switcher"] [class~="s-icon"] {
   right: 100%;
-  border: 1px solid var(--bg-black-50);
-  margin-right: 25px;
-  cursor: pointer;
-  transition: all 0.3s ease;
+}
+[class~="style-switcher"] [class~="s-icon"],
+[class~="style-switcher"] {
+  border-left-width: 0.010416667in;
+}
+[class~="style-switcher"] [class~="colors"] span {
+  display: inline-block;
+}
+[class~="style-switcher"],
+[class~="style-switcher"] [class~="s-icon"] {
+  border-bottom-width: 0.010416667in;
+}
+[class~="style-switcher"] {
+  padding-bottom: 0.9375pc;
+}
+[class~="style-switcher"] h4 {
+  margin-bottom: 0.104166667in;
+}
+[class~="style-switcher"] {
+  padding-right: 0.9375pc;
+}
+[class~="style-switcher"] [class~="s-icon"],
+[class~="style-switcher"] {
+  border-right-width: 0.010416667in;
+}
+[class~="style-switcher"] h4 {
+  margin-right: 0;
+}
+[class~="style-switcher"] h4 {
+  margin-top: 0;
+}
+[class~="style-switcher"] {
+  padding-top: 0.9375pc;
+}
+[class~="style-switcher"] [class~="s-icon"],
+[class~="style-switcher"] {
+  border-top-width: 0.010416667in;
+}
+[class~="style-switcher"],
+[class~="style-switcher"] [class~="s-icon"] {
+  border-left-style: solid;
+}
+[class~="style-switcher"] {
+  width: 2.083333333in;
+}
+[class~="style-switcher"],
+[class~="style-switcher"] [class~="s-icon"] {
+  border-bottom-style: solid;
+}
+[class~="style-switcher"] [class~="s-icon"],
+[class~="style-switcher"] {
+  border-right-style: solid;
+}
+[class~="style-switcher"] [class~="s-icon"],
+[class~="style-switcher"] {
+  border-top-style: solid;
+}
+[class~="style-switcher"],
+[class~="style-switcher"] [class~="s-icon"] {
+  border-left-color: var(--bg-black-50);
+}
+[class~="style-switcher"],
+[class~="style-switcher"] [class~="s-icon"] {
+  border-bottom-color: var(--bg-black-50);
+}
+[class~="style-switcher"] [class~="colors"] span {
+  height: 30px;
+}
+[class~="style-switcher"],
+[class~="style-switcher"] [class~="s-icon"] {
+  border-right-color: var(--bg-black-50);
+}
+[class~="style-switcher"],
+[class~="style-switcher"] [class~="s-icon"] {
+  border-top-color: var(--bg-black-50);
+}
+[class~="style-switcher"] h4 {
+  color: var(--text-black-700);
+}
+[class~="style-switcher"] [class~="s-icon"],
+[class~="style-switcher"] {
+  border-image: none;
+}
+[class~="style-switcher"] h4 {
+  font-size: 0.166666667in;
+}
+[class~="style-switcher"] h4 {
+  font-weight: 600;
+}
+[class~="style-switcher"] [class~="colors"] span {
+  width: 22.5pt;
+}
+[class~="style-switcher"] {
+  z-index: 101;
+}
+[class~="style-switcher"] [class~="colors"] span,
+[class~="style-switcher"] [class~="s-icon"] {
   border-radius: 50%;
 }
-.style-switcher .s-icon i {
-  line-height: 40px;
+[class~="style-switcher"] {
+  border-radius: 0.3125pc;
+}
+[class~="style-switcher"],
+[class~="style-switcher"] [class~="s-icon"] {
+  transition: all 0.3s ease;
+}
+[class~="style-switcher"] h4 {
+  text-transform: capitalize;
+}
+[class~="style-switcher"] {
+  transform: translateX(100%);
+}
+[class~="style-switcher"] [class~="s-icon"] {
+  margin-right: 25px;
+}
+[class~="style-switcher"] [class~="s-icon"] {
+  cursor: pointer;
 }
 .style-switcher .style-switcher-toggler {
   top: 0;
 }
-.style-switcher .day-night {
-  top: 55px;
+[class~="style-switcher"] [class~="day-night"] {
+  top: 3.4375pc;
 }
-.style-switcher h4 {
-  margin: 0 0 10px;
-  color: var(--text-black-700);
-  font-size: 16px;
-  font-weight: 600;
-  text-transform: capitalize;
-}
-.style-switcher .colors {
+[class~="style-switcher"] [class~="colors"] {
   display: flex;
+}
+[class~="style-switcher"] [class~="colors"] {
   flex-wrap: wrap;
+}
+[class~="style-switcher"] [class~="colors"] {
   justify-content: space-between;
 }
-.style-switcher .colors span {
-  display: inline-block;
-  height: 30px;
-  width: 30px;
-  border-radius: 50%;
-}
-.style-switcher .color-1 {
+[class~="style-switcher"] [class~="color-1"] {
   background: #ec1839;
 }
-.style-switcher .color-2 {
+[class~="style-switcher"] [class~="color-2"] {
   background: #fa5b0f;
 }
-.style-switcher .color-3 {
+[class~="style-switcher"] [class~="color-3"] {
   background: #37b182;
 }
-.style-switcher .color-4 {
+[class~="style-switcher"] [class~="color-4"] {
   background: #1854b4;
 }
-.style-switcher .color-5 {
+[class~="style-switcher"] [class~="color-5"] {
   background: #f021b2;
 }
