--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,347 +1,2 @@
-[class~="portfolio-img"] [class~="card-body"] {
-  width: 100%;
-}
-[class~="portfolio-img"] [class~="card-body"] {
-  height: 100%;
-}
-.portfolio-item-inner {
-  border-radius: 1.25pc;
-}
-.portfolio-item-inner {
-  overflow: hidden;
-}
-.portfolio-item-inner {
-  border-left-width: 0.5pc;
-}
-[class~="portfolio-img"] [class~="card-body"] {
-  top: 0;
-}
-[class~="portfolio-item-inner"]:hover [class~="card-body"] {
-  right: 0;
-}
-.portfolio-item-inner {
-  border-bottom-width: 0.5pc;
-}
-[class~="portfolio-img"] [class~="card-body"] {
-  right: -100%;
-}
-.portfolio-item-inner {
-  border-right-width: 0.5pc;
-}
-.portfolio-item-inner {
-  border-top-width: 0.5pc;
-}
-[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
-  border-left-width: 0.375pc;
-}
-[class~="portfolio"] [class~="portfolio-item-inner"]:hover,
-.portfolio-item-inner {
-  border-left-style: solid;
-}
-.portfolio-item-inner,
-[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
-  border-bottom-style: solid;
-}
-[class~="portfolio-img"] [class~="card-body"] {
-  position: absolute;
-}
-.portfolio-item-inner,
-[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
-  border-right-style: solid;
-}
-[class~="portfolio-img"] [class~="card-body"] {
-  background: var(--bg-black-100);
-}
-[class~="portfolio"] [class~="portfolio-item-inner"]:hover,
-.portfolio-item-inner {
-  border-top-style: solid;
-}
-[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
-  border-bottom-width: 0.375pc;
-}
-.portfolio-item-inner {
-  border-left-color: var(--skin-color);
-}
-.portfolio-item-inner {
-  border-bottom-color: var(--skin-color);
-}
-.portfolio-item-inner {
-  border-right-color: var(--skin-color);
-}
-.portfolio-item-inner {
-  border-top-color: var(--skin-color);
-}
-.portfolio-item-inner {
-  border-image: none;
-}
-[class~="portfolio-img"] [class~="card-body"] {
-  backdrop-filter: blur(5px);
-}
-[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
-  border-right-width: 0.375pc;
-}
-.portfolio-item-inner {
-  position: relative;
-}
-[class~="card-title"] {
-  text-transform: uppercase;
-}
-[class~="card-title"] {
-  font-size: 37.5pt;
-}
-[class~="card-title"] {
-  font-weight: 500;
-}
-[class~="card-btn"],
-[class~="card-sub-title"] {
-  text-transform: capitalize;
-}
-[class~="card-sub-title"] {
-  font-size: 15px;
-}
-[class~="card-sub-title"] {
-  font-weight: 700;
-}
-[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
-  border-top-width: 0.375pc;
-}
-[class~="card-info"] {
-  font-size: 1pc;
-}
-[class~="card-info"] {
-  line-height: 18.75pt;
-}
-[class~="card-info"] {
-  margin-left: 0;
-}
-[class~="card-info"] {
-  margin-bottom: 18.75pt;
-}
-[class~="portfolio-img"] [class~="card-body"] {
-  color: var(--skin-color);
-}
-[class~="card-info"] {
-  margin-right: 0;
-}
-[class~="card-info"] {
-  margin-top: 18.75pt;
-}
-[class~="card-info"] {
-  font-weight: 400;
-}
-[class~="portfolio-img"] [class~="card-body"] {
-  padding-left: 22.5pt;
-}
-[class~="card-info"] {
-  color: var(--text-black-900);
-}
-[class~="portfolio-img"] [class~="card-body"] {
-  padding-bottom: 22.5pt;
-}
-[class~="card-btn"] {
-  background: var(--skin-color);
-}
-[class~="portfolio-img"] [class~="card-body"] {
-  padding-right: 22.5pt;
-}
-[class~="card-btn"] {
-  padding-left: 0.15625in;
-}
-[class~="card-btn"] {
-  padding-bottom: 0.625pc;
-}
-[class~="card-btn"] {
-  padding-right: 0.15625in;
-}
-[class~="card-btn"] {
-  padding-top: 0.625pc;
-}
-[class~="card-btn"] {
-  width: 120px;
-}
-[class~="card-btn"] {
-  border-left-width: medium;
-}
-[class~="portfolio-img"] [class~="card-body"] {
-  padding-top: 22.5pt;
-}
-[class~="portfolio-img"] [class~="card-body"] {
-  display: flex;
-}
-[class~="portfolio-img"] img {
-  width: 100%;
-}
-[class~="card-btn"] {
-  border-bottom-width: medium;
-}
-[class~="card-btn"] {
-  border-right-width: medium;
-}
-[class~="card-btn"] {
-  border-top-width: medium;
-}
-[class~="card-btn"] {
-  border-left-style: none;
-}
-[class~="card-btn"] {
-  border-bottom-style: none;
-}
-[class~="card-btn"] {
-  border-right-style: none;
-}
-[class~="portfolio-img"] [class~="card-body"] {
-  flex-direction: column;
-}
-[class~="card-btn"] {
-  border-top-style: none;
-}
-[class~="card-btn"] {
-  border-left-color: currentColor;
-}
-[class~="card-btn"] {
-  border-bottom-color: currentColor;
-}
-[class~="card-btn"] {
-  border-right-color: currentColor;
-}
-[class~="card-btn"] {
-  border-top-color: currentColor;
-}
-[class~="portfolio-img"] [class~="card-body"] {
-  justify-content: center;
-}
-[class~="card-btn"] {
-  border-image: none;
-}
-[class~="portfolio-img"] [class~="card-body"] {
-  transition: 1s;
-}
-[class~="portfolio-img"] img {
-  height: 400px;
-}
-[class~="card-btn"] {
-  outline: none;
-}
-[class~="card-btn"] {
-  cursor: pointer;
-}
-[class~="card-btn"] {
-  margin-left: 0.0625pc;
-}
-[class~="card-btn"] {
-  margin-bottom: 0;
-}
-[class~="card-btn"] {
-  margin-right: 0.0625pc;
-}
-[class~="card-btn"] {
-  margin-top: 0;
-}
-[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
-  border-left-color: var(--skin-color);
-}
-[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
-  border-bottom-color: var(--skin-color);
-}
-[class~="portfolio-img"] img {
-  object-fit: cover;
-}
-[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
-  border-right-color: var(--skin-color);
-}
-[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
-  border-top-color: var(--skin-color);
-}
-[class~="portfolio"] [class~="portfolio-item-inner"]:hover {
-  border-image: none;
-}
-.card-btn a {
-  text-decoration: none;
-}
-.card-btn a {
-  color: #ff0;
-}
-@media (max-width: 395px) {
-  [class~="portfolio-img"] img {
-    height: 5.208333333in;
-  }
-  .card-info,
-  .portfolio-img button {
-    margin-left: 0;
-  }
-  .card-info {
-    margin-bottom: 0.9375pc;
-  }
-  .portfolio-img button,
-  .card-info {
-    margin-right: 0;
-  }
-  .card-info {
-    margin-top: 0.9375pc;
-  }
-  .portfolio-img button {
-    margin-bottom: 0.25pc;
-  }
-  .portfolio-img button {
-    margin-top: 0.25pc;
-  }
-}
-@media (max-width: 355px) {
-  [class~="portfolio-img"] button,
-  [class~="card-info"] {
-    margin-left: 0;
-  }
-  [class~="card-info"] {
-    margin-bottom: 11.25pt;
-  }
-  [class~="card-info"],
-  [class~="portfolio-img"] button {
-    margin-right: 0;
-  }
-  [class~="card-info"] {
-    margin-top: 11.25pt;
-  }
-  [class~="portfolio-img"] img {
-    height: 500px;
-  }
-  [class~="portfolio-img"] button {
-    margin-bottom: 0.25pc;
-  }
-  [class~="card-title"] {
-    font-size: 0.3125in;
-  }
-  [class~="portfolio-img"] button {
-    margin-top: 0.25pc;
-  }
-}
-@media (max-width: 280px) {
-  .portfolio-img img {
-    height: 5.208333333in;
-  }
-  [class~="portfolio-img"] button,
-  [class~="card-info"] {
-    margin-left: 0;
-  }
-  [class~="card-info"] {
-    margin-bottom: 0.625pc;
-  }
-  [class~="portfolio-img"] button,
-  [class~="card-info"] {
-    margin-right: 0;
-  }
-  [class~="card-info"] {
-    margin-top: 0.625pc;
-  }
-  [class~="portfolio-img"] button {
-    margin-bottom: 2.25pt;
-  }
-  [class~="portfolio-img"] button {
-    margin-top: 2.25pt;
-  }
-  [class~="card-info"] {
-    font-size: 11.25pt;
-  }
-  [class~="card-title"] {
-    font-size: 0.260416667in;
-  }
-}
+
+[class~=portfolio-img] [class~=card-body]{width:100%;}[class~=portfolio-img] [class~=card-body]{height:100%;}.portfolio-item-inner{border-radius:1.25pc;}.portfolio-item-inner{overflow:hidden;}.portfolio-item-inner{border-left-width:.5pc;}[class~=portfolio-img] [class~=card-body]{top:0;}[class~=portfolio-item-inner]:hover [class~=card-body]{right:0;}.portfolio-item-inner{border-bottom-width:.5pc;}[class~=portfolio-img] [class~=card-body]{right:-100%;}.portfolio-item-inner{border-right-width:.5pc;}.portfolio-item-inner{border-top-width:.5pc;}[class~=portfolio] [class~=portfolio-item-inner]:hover{border-left-width:.375pc;}[class~=portfolio] [class~=portfolio-item-inner]:hover,.portfolio-item-inner{border-left-style:solid;}.portfolio-item-inner,[class~=portfolio] [class~=portfolio-item-inner]:hover{border-bottom-style:solid;}[class~=portfolio-img] [class~=card-body]{position:absolute;}.portfolio-item-inner,[class~=portfolio] [class~=portfolio-item-inner]:hover{border-right-style:solid;}[class~=portfolio-img] [class~=card-body]{background:var(--bg-black-100);}[class~=portfolio] [class~=portfolio-item-inner]:hover,.portfolio-item-inner{border-top-style:solid;}[class~=portfolio] [class~=portfolio-item-inner]:hover{border-bottom-width:.375pc;}.portfolio-item-inner{border-left-color:var(--skin-color);}.portfolio-item-inner{border-bottom-color:var(--skin-color);}.portfolio-item-inner{border-right-color:var(--skin-color);}.portfolio-item-inner{border-top-color:var(--skin-color);}.portfolio-item-inner{border-image:none;}[class~=portfolio-img] [class~=card-body]{backdrop-filter:blur(5px);}[class~=portfolio] [class~=portfolio-item-inner]:hover{border-right-width:.375pc;}.portfolio-item-inner{position:relative;}[class~=card-title]{text-transform:uppercase;}[class~=card-title]{font-size:37.5pt;}[class~=card-title]{font-weight:500;}[class~=card-btn],[class~=card-sub-title]{text-transform:capitalize;}[class~=card-sub-title]{font-size:15px;}[class~=card-sub-title]{font-weight:700;}[class~=portfolio] [class~=portfolio-item-inner]:hover{border-top-width:.375pc;}[class~=card-info]{font-size:1pc;}[class~=card-info]{line-height:18.75pt;}[class~=card-info]{margin-left:0;}[class~=card-info]{margin-bottom:18.75pt;}[class~=portfolio-img] [class~=card-body]{color:var(--skin-color);}[class~=card-info]{margin-right:0;}[class~=card-info]{margin-top:18.75pt;}[class~=card-info]{font-weight:400;}[class~=portfolio-img] [class~=card-body]{padding-left:22.5pt;}[class~=card-info]{color:var(--text-black-900);}[class~=portfolio-img] [class~=card-body]{padding-bottom:22.5pt;}[class~=card-btn]{background:var(--skin-color);}[class~=portfolio-img] [class~=card-body]{padding-right:22.5pt;}[class~=card-btn]{padding-left:.15625in;}[class~=card-btn]{padding-bottom:.625pc;}[class~=card-btn]{padding-right:.15625in;}[class~=card-btn]{padding-top:.625pc;}[class~=card-btn]{width:120px;}[class~=card-btn]{border-left-width:medium;}[class~=portfolio-img] [class~=card-body]{padding-top:22.5pt;}[class~=portfolio-img] [class~=card-body]{display:flex;}[class~=portfolio-img] img{width:100%;}[class~=card-btn]{border-bottom-width:medium;}[class~=card-btn]{border-right-width:medium;}[class~=card-btn]{border-top-width:medium;}[class~=card-btn]{border-left-style:none;}[class~=card-btn]{border-bottom-style:none;}[class~=card-btn]{border-right-style:none;}[class~=portfolio-img] [class~=card-body]{flex-direction:column;}[class~=card-btn]{border-top-style:none;}[class~=card-btn]{border-left-color:currentColor;}[class~=card-btn]{border-bottom-color:currentColor;}[class~=card-btn]{border-right-color:currentColor;}[class~=card-btn]{border-top-color:currentColor;}[class~=portfolio-img] [class~=card-body]{justify-content:center;}[class~=card-btn]{border-image:none;}[class~=portfolio-img] [class~=card-body]{transition:1s;}[class~=portfolio-img] img{height:400px;}[class~=card-btn]{outline:none;}[class~=card-btn]{cursor:pointer;}[class~=card-btn]{margin-left:.0625pc;}[class~=card-btn]{margin-bottom:0;}[class~=card-btn]{margin-right:.0625pc;}[class~=card-btn]{margin-top:0;}[class~=portfolio] [class~=portfolio-item-inner]:hover{border-left-color:var(--skin-color);}[class~=portfolio] [class~=portfolio-item-inner]:hover{border-bottom-color:var(--skin-color);}[class~=portfolio-img] img{object-fit:cover;}[class~=portfolio] [class~=portfolio-item-inner]:hover{border-right-color:var(--skin-color);}[class~=portfolio] [class~=portfolio-item-inner]:hover{border-top-color:var(--skin-color);}[class~=portfolio] [class~=portfolio-item-inner]:hover{border-image:none;}.card-btn a{text-decoration:none;}.card-btn a{color:#ff0;}@media (max-width: 395px){[class~=portfolio-img] img{height:5.208333333in;}.card-info,.portfolio-img button{margin-left:0;}.card-info{margin-bottom:.9375pc;}.portfolio-img button,.card-info{margin-right:0;}.card-info{margin-top:.9375pc;}.portfolio-img button{margin-bottom:.25pc;}.portfolio-img button{margin-top:.25pc;}}@media (max-width: 355px){[class~=portfolio-img] button,[class~=card-info]{margin-left:0;}[class~=card-info]{margin-bottom:11.25pt;}[class~=card-info],[class~=portfolio-img] button{margin-right:0;}[class~=card-info]{margin-top:11.25pt;}[class~=portfolio-img] img{height:500px;}[class~=portfolio-img] button{margin-bottom:.25pc;}[class~=card-title]{font-size:.3125in;}[class~=portfolio-img] button{margin-top:.25pc;}}@media (max-width: 280px){.portfolio-img img{height:5.208333333in;}[class~=portfolio-img] button,[class~=card-info]{margin-left:0;}[class~=card-info]{margin-bottom:.625pc;}[class~=portfolio-img] button,[class~=card-info]{margin-right:0;}[class~=card-info]{margin-top:.625pc;}[class~=portfolio-img] button{margin-bottom:2.25pt;}[class~=portfolio-img] button{margin-top:2.25pt;}[class~=card-info]{font-size:11.25pt;}[class~=card-title]{font-size:.260416667in;}}
